--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cs">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="msvalidate.01" content="D2AD7A113008FC74790DF41CC4A965C3" />
+    <meta name="yandex-verification" content="d2c4bd0276f917c5" />
+
     <title>Kapela MaWeM</title>
+
+    <link rel="icon" href="img/MaWem_bright.jpg">
     <link rel="stylesheet" type="text/css" href="main.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,600,700" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-
 
 <body id="top">
     <section id="section-home">
@@ -25,9 +30,6 @@
             <div class="carousel-slide fade">
                 <img src="img/main4.jpg" alt="Main 4" />
             </div>
-
-            <a class="carousel-prev" onclick="handlePreviousSlide()">&#10094;</a>
-            <a class="carousel-next" onclick="handleNextSlide()">&#10095;</a>
 
             <div id="logo" class="content">
                 <img src="img/mawem_logo2.png" alt="logo" />
@@ -54,6 +56,7 @@
             <i class="fa fa-bars"></i>
         </a>
     </nav>
+
     <div id="mobileNav" onClick="handleCloseDialog()">
         <a href="javascript:void(0)" id="closeDialog">
             <h3>X</h3>
@@ -82,7 +85,7 @@
                 <div class="card">
                     <img src="img/main3.jpg" alt="kostniky">
                     <div class="card-body">
-                        <p clas="date">21.10.2018</p>
+                        <p class="date">21.10.2018</p>
                         <h4>Posvícenská zábava Kostníky</h4>
                         <p>Díky moc, že jste se zúčastnili !! Přišlo vás víc jak 160. Moc si toho vážíme. Doufám, že se vám to líbilo a případně nám můžete zanechat vzkaz co se vám libílo/nelíbilo :)</p>
                     </div>
@@ -90,7 +93,7 @@
                 <div class="card">
                     <img src="img/uhercice.jpg" alt="Barevna stage">
                     <div class="card-body">
-                        <p clas="date">20.10.2018</p>
+                        <p class="date">20.10.2018</p>
                         <h4>Konečně změna našeho názvu</h4>
                         <p>Na posvícenské zábavě jsme odhalili náš nový název. Jste na těchto stránkách, tak vidíte, že my jsme MAWEM!!</p>
                     </div>
@@ -98,7 +101,7 @@
                 <div class="card">
                     <img src="img/kostnikyStage.jpg" alt="kapela">
                     <div class="card-body">
-                        <p clas="date">20.10.2018</p>
+                        <p class="date">10.3.2020</p>
                         <h4>Zakoupení nových světelných aparátů</h4>
                         <p>Naši kapelu čekalo pár změn a uvažujeme i o nahrávce našich písní! :)</p>
                     </div>
@@ -109,7 +112,7 @@
 
     <section id="section-about" class="light">
         <div class="content">
-            <h2>O nás</h2>
+            <h1>O nás</h1>
 
             <div class="about-container">
 
@@ -152,26 +155,18 @@
                 </div>
             </div>
         </div>
-
-
     </section>
 
     <section id="section-cast">
         <div class="content">
-            <h2>Obsazení</h2>
+            <h1>Obsazení</h1>
             <div class="cards cast" id="cast">
                 <div class="card person" id="teson"></div>
                 <div class="card person" id="matyld"></div>
                 <div class="card person" id="verda"></div>
-
                 <div class="card person" id="boucek"></div>
-
-
                 <div class="card person audio" id="jirka"></div>
-
             </div>
-
-
         </div>
     </section>
 
@@ -179,21 +174,20 @@
         <div class="content">
             <div class="contact-container">
                 <div class="contact-item floatLeft">
-                    <h2>Kontaktujte nás</h2>
+                    <h1>Kontaktujte nás</h1>
                     <p>MARTIN BARTOŠ</p>
                     <p>thematyld@gmail.com</p>
                     <p>Tel. 728 245 284</p>
                 </div>
                 <div class="contact-item floatRight">
                     <img src="img/logo_black.png" alt="logo">
-
-
                     <a href="https://www.facebook.com/mawem.kostniky/"><img id="icon" src="img/fb_icon.png" alt="fb"></a>
                 </div>
             </div>
         </div>
     </section>
+    <script src="main.js"></script>
+
 </body>
-<script src="main.js"></script>
 
 </html>
