Lower quality for images, contact edit

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="msvalidate.01" content="D2AD7A113008FC74790DF41CC4A965C3" />
     <meta name="yandex-verification" content="d2c4bd0276f917c5" />
 
-    <title>Kapela MaWeM</title>
+    <title>MaWeM</title>
 
-    <link rel="icon" href="img/MaWem_bright.jpg">
+    <link rel="icon" href="img/mawem_logo.png">
     <link rel="stylesheet" type="text/css" href="main.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,600,700" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -19,16 +19,16 @@
     <section id="section-home">
         <div class="carousel-container">
             <div class="carousel-slide fade">
-                <img src="img/main1.jpg" alt="Main 1" />
+                <img src="img/main3.jpg" alt="Main 1" />
             </div>
             <div class="carousel-slide fade">
-                <img src="img/main2.jpg" alt="Main 2" />
+                <img src="img/lower_quality/main1_lq.jpg" alt="Main 2" />
             </div>
             <div class="carousel-slide fade">
-                <img src="img/main3.jpg" alt="Main 3" />
+                <img src="img/lower_quality/main2_lq.jpg" alt="Main 3" />
             </div>
             <div class="carousel-slide fade">
-                <img src="img/main4.jpg" alt="Main 4" />
+                <img src="img/lower_quality/main4_lq.jpg" alt="Main 4" />
             </div>
 
             <div id="logo" class="content">
@@ -175,13 +175,13 @@
             <div class="contact-container">
                 <div class="contact-item floatLeft">
                     <h1>Kontaktujte nás</h1>
-                    <p>MARTIN BARTOŠ</p>
-                    <p>thematyld@gmail.com</p>
-                    <p>Tel. 728 245 284</p>
-                </div>
-                <div class="contact-item floatRight">
-                    <img src="img/logo_black.png" alt="logo">
-                    <a href="https://www.facebook.com/mawem.kostniky/"><img id="icon" src="img/fb_icon.png" alt="fb"></a>
+
+                    <p>Email:</p>
+                    <h3>info@mawem.cz</h3>
+                    <h3>728 245 284</h3>
+
+                    <a href="https://www.facebook.com/mawem.kostniky/"><img id="icon" src="img/fb_logo.png" alt="fb"></a>
+                    <a href="https://www.instagram.com/mawem_band/"><img id="icon" src="img/instagram_logo.png" alt="instagram"></a>
                 </div>
             </div>
         </div>
