--- a/index.html
+++ b/index.html
@@ -85,25 +85,27 @@
                 <div class="card">
                     <img src="img/main3.jpg" alt="kostniky">
                     <div class="card-body">
-                        <p class="date">21.10.2018</p>
-                        <h4>Posvícenská zábava Kostníky</h4>
-                        <p>Díky moc, že jste se zúčastnili !! Přišlo vás víc jak 160. Moc si toho vážíme. Doufám, že se vám to líbilo a případně nám můžete zanechat vzkaz co se vám libílo/nelíbilo :)</p>
+                        <p class="date">16.10.2021</p>
+                        <h4>Posvícenská zábava Kostníky 2021</h4>
+                        <p>Opět se chystáme pořádat Posvícenskou zábavu v našich rodných Kostníkách! Předběžný termín je 16.10.2021. Více info sdělíme na Facebooku a Instagramu :) Doufáme, že se s vámi uvidíme!</p>
                     </div>
                 </div>
+
+                <div class="card">
+                    <img src="img/stitary.jpeg" alt="stitary">
+                    <div class="card-body">
+                        <p class="date">27.8.2021</p>
+                        <h4>Letní taneční zábava Štítary</h4>
+                        <p>Další akce, na které jsme vystupovali, byla na ukončení prázdnin v kulturním domě ve Štítarech. Po dlouhé odmlce jsme opět vyrazili a skočili na stage! Na našem Instagram účtu můžete vidět ukázku z vystoupení. Byli jste úžasníí!</p>
+                    </div>
+                </div>
+
                 <div class="card">
                     <img src="img/uhercice.jpg" alt="Barevna stage">
                     <div class="card-body">
                         <p class="date">20.10.2018</p>
                         <h4>Konečně změna našeho názvu</h4>
                         <p>Na posvícenské zábavě jsme odhalili náš nový název. Jste na těchto stránkách, tak vidíte, že my jsme MAWEM!!</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="img/kostnikyStage.jpg" alt="kapela">
-                    <div class="card-body">
-                        <p class="date">10.3.2020</p>
-                        <h4>Zakoupení nových světelných aparátů</h4>
-                        <p>Naši kapelu čekalo pár změn a uvažujeme i o nahrávce našich písní! :)</p>
                     </div>
                 </div>
             </div>
